apps/sftp/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sftpgo
  labels:
    gateway-access: sftpgo
